# qwen-launcher-safe

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  dashboard_egui.rs  f.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-fix-from-logs.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md
src/: config.rs  dashboard.rs  launcher.rs  main.rs  monitor.rs  process.rs  state.rs
win-verify/: verify.bat
